--- a/index.css
+++ b/index.css
@@ -99,6 +99,7 @@ body {
   box-shadow: 0 1px 6px -2px #000;
   background-color: #FFF;
   margin-bottom: 30px;
+  flex-direction: column;
 }
 
 .card img {
@@ -121,6 +122,10 @@ body {
   font-size: 1.8rem;
   font-style: italic;
   margin: 3px 0 10px;
+}
+
+.topwrap{
+  display:flex;
 }
 
 
